# hlslib

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE.md  README.md  hlslib.doxygen
cmake/: FindIntelFPGAOpenCL.cmake  FindSDAccel.cmake  FindVitis.cmake  FindVivado.cmake  FindVivadoHLS.cmake  FindVivadoLab.cmake  hlslibTargets.cmake.in
host/: RunAccumulate.cpp  RunAccumulateFloat.cpp  RunMultiStageAdd.cpp
include/: AccumulateCommon.h  AccumulateFloat.h  AccumulateInt.h  MultiStageAdd.h  aligned_allocator.h
include/common/: OpenCL.h
include/hlslib/: Accumulate.h  Axi.h  DataPack.h  Flatten.h  Operators.h  Resource.h  SDAccel.h  Simulation.h  Stream.h  TreeReduce.h  Utility.h
include/hlslib/common/: OpenCL.h
include/hlslib/intel/: OpenCL.h
include/hlslib/xilinx/: Accumulate.h  Axi.h  DataPack.h  Flatten.h  OpenCL.h  Operators.h  Resource.h  SDAccel.h  ShiftRegister.h  Simulation.h  SlidingWindow.h  Stream.h  TreeReduce.h  Utility.h
include/intel/hlslib/: OpenCL.h
intel_test/: .gitignore  CMakeLists.txt
intel_test/host/: RunDDRExplicitTest.cpp  RunJacobi2D.cpp  TestGlobalContext.cpp
intel_test/include/: Jacobi2D.h
intel_test/kernels/: Jacobi2D.cl
kernels/: Accumulate.cpp  AccumulateFloat.cpp  AccumulateInt.cpp  Flatten.cpp  MultiStageAdd.cpp  Reduce.cpp
scripts/: Synthesis.tcl.in
test/: TestAccumulate.cpp  TestAccumulateFloat.cpp  TestDataPack.cpp  TestFlatten.cpp  TestReduce.cpp  TestSDAccelHostCode.cpp  TestSimulationForwarding.cpp  TestStream.cpp
xilinx_test/: CMakeLists.txt
xilinx_test/configs/: ddrkernel.cfg  hbmkernel.cfg
xilinx_test/host/: RunAccumulate.cpp  RunAccumulateFloat.cpp  RunAccumulateInt.cpp  RunDDRExplicit.cpp  RunHBMKernel.cpp  RunHBMandBlockCopy.cpp  RunMultiStageAdd.cpp  RunShiftRegister.cpp  RunSlidingWindow.cpp  build.sh  emconfig.json  sw_emudummy_for_hlslibtest.xclbin  testprog
xilinx_test/include/: AccumulateCommon.h  AccumulateFloat.h  AccumulateInt.h  MultiStageAdd.h  MultipleKernels.h  ShiftRegister.h  Subflow.h
xilinx_test/kernels/: AccumulateFloat.cpp  AccumulateInt.cpp  DDRExplicit.cpp  Flatten.cpp  HBMKernel.cpp  HBMandBlockCopy.cpp  MultiStageAdd.cpp  MultipleKernels.cpp  Reduce.cpp  ShiftRegister.cpp  SlidingWindow.cpp  StreamAPI.cpp  Subflow.cpp  TightPacking.cpp
xilinx_test/scripts/: Synthesis.tcl.in  collect_sdaccel_profiling.py
xilinx_test/test/: TestAccumulate.cpp  TestDataPack.cpp  TestFlatten.cpp  TestHBMandBlockCopySimulation.cpp  TestMultipleKernels.cpp  TestReduce.cpp  TestSDAccelHostCode.cpp  TestShiftRegister.cpp  TestSimulationForwarding.cpp  TestSlidingWindow.cpp  TestStream.cpp  TestSubflow.cpp  TestXilinxHostCode.cpp
